[incubator-kie-issues#2190] WIP